# INT3505E_01_demo

./: .gitignore  books.db  main.py  main_cache.py  pyproject.toml
W10/: app.py
W4/: main_cache.py  main_stateless.py  main_uninterface.py
W4/layered/: services.py
W5/: versioning_webhook.py  webhook_consumer.py
W6/users/: index.ts
W9/: api-doc.yaml  generate_code.py  main.py
W9/generated_code/.openapi-generator/: FILES
W9/generated_code/openapi_server/: __main__.py
W9/generated_code/openapi_server/controllers/: authentication_controller.py  default_controller.py  user_management_controller.py
W9/generated_code/openapi_server/models/: __init__.py  delete_api_users_by_id200_response.py  get_api200_response.py  get_api_users_by_id_id_parameter.py  get_api_users_me200_response.py  get_api_users_offset200_response.py  get_api_users_offset200_response_users_inner.py  get_index200_response.py  patch_api_users_by_id_addresses_by_address_id_request.py  patch_api_users_by_id_request.py  post_api_auth_login200_response.py  post_api_auth_login401_response.py  post_api_auth_login_request.py  post_api_auth_logout200_response.py  post_api_users201_response.py  post_api_users_by_id_addresses201_response.py  post_api_users_by_id_addresses201_response_address.py  post_api_users_by_id_addresses_request.py  post_api_users_by_id_addresses_request_is_default.py  post_api_users_request.py  post_api_users_request_dob.py
W9/generated_code/openapi_server/openapi/: openapi.yaml
app/: main.py  models.py  services.py
layered/: main_layered.py  models.py
(+3 files in other folders)
