[project]
name = "lib-flask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask",
    "apiflask",
    "peewee",
    "Faker",
    "PyJWT",
    "flask_jwt_extended",
    "openapi-generator-cli",
    "mongoengine",
    "python-dotenv",
    "flask-marshmallow>=1.2.0",
    "nest_asyncio",
    "pytest",
    "mongomock"
]
